tests/ui/view-types/must-restrict.stderr
error[E0432]: unresolved import `std::view`
  --> $DIR/must-restrict.rs:5:10
   |
LL | use std::view::view_type;
   |          ^^^^ could not find `view` in `std`

error[E0635]: unknown feature `view_type_macro`
  --> $DIR/must-restrict.rs:1:24
   |
LL | #![feature(view_types, view_type_macro)]
   |                        ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0635.
For more information about an error, try `rustc --explain E0432`.
